Fix capitalization of Depends, import infotheo in NAMESPACE
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_2_14/madman/Rpacks/minet@94671 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 useDynLib(minet)
 
+import(infotheo)
 importFrom(graphics, lines, plot, points)
 importFrom(grDevices, dev.cur, dev.new, dev.set)
 importFrom(stats, cor)
