--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: minet
 Title: Mutual Information NETworks
-Version: 3.20.1
+Version: 3.20.2
 Date: 2013-10
 Author: Patrick E. Meyer, Frederic Lafitte, Gianluca Bontempi
 Description: This package implements various algorithms for inferring
@@ -8,5 +8,5 @@ Description: This package implements various algorithms for inferring
 Maintainer: Patrick E. Meyer <software@meyerp.com>
 License: CC BY-NC-SA 3.0
 URL: http://minet.meyerp.com
-depends: infotheo
+Depends: infotheo
 biocViews: Microarray, GraphAndNetwork, Network, NetworkInference
