--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: minet
 Title: Mutual Information NETworks
-Version: 3.44.0
+Version: 3.44.1
 Date: 2014-07
 Author: Patrick E. Meyer, Frederic Lafitte, Gianluca Bontempi
 Description: This package implements various algorithms for inferring
         mutual information networks from data.
 Maintainer: Patrick E. Meyer <software@meyerp.com>
-License: file LICENSE
+License: Artistic-2.0
 URL: http://minet.meyerp.com
 Imports: infotheo
 biocViews: Microarray, GraphAndNetwork, Network, NetworkInference
